# revisia-tap-contact

./: .env  .env.example  README.md  app.py  app_patched.py  generate_archive.py  pyproject.toml  requirements-dev.txt  requirements.txt
blocks/: 01_init_db.py  02_patch_save_lead.py  03_export_list_delete_csv.py
data/: leads.csv
modules/: contact.py  qr.py  storage.py  utils.py
scripts/: qr_smoke.py
tests/: test_qr.py  test_storage.py
