[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","B"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_redundant_casts = true
warn_unused_ignores = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
